update: preload polygons & test annotations in client side
