# server/alembic/versions/f0a72be7108b_add_polygon_field_to_annotation_table.py
@@ -1,0 +1,29 @@
+"""add polygon field to annotation table
+
+Revision ID: f0a72be7108b
+Revises: 6a90fb10437a
+Create Date: 2025-07-23 15:54:55.531555
+
+"""
+from typing import Sequence, Union
+from alembic import op
+import sqlalchemy as sa
+from sqlalchemy.dialects import postgresql
+
+# revision identifiers, used by Alembic.
+revision: str = 'f0a72be7108b'
+down_revision: Union[str, None] = '6a90fb10437a'
+branch_labels: Union[str, Sequence[str], None] = None
+depends_on: Union[str, Sequence[str], None] = None
+
+
+def upgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.add_column('annotations_test', sa.Column('polygon', postgresql.JSONB(astext_type=sa.Text()), nullable=True))
+    # ### end Alembic commands ###
+
+
+def downgrade() -> None:
+    # ### commands auto generated by Alembic - please adjust! ###
+    op.drop_column('annotations_test', 'polygon')
+    # ### end Alembic commands ### 
